--- a/styles/style.css
+++ b/styles/style.css
@@ -165,6 +165,8 @@ a:hover {
 #tertiary .box {background: #990000; border: 1px solid #628066; border-width: 0 1px 1px 0; padding: 30px; overflow:hidden; margin-bottom:0px;}
 #tertiary .box .col {width:419px; float:left; margin-left:40px;}
 #tertiary .box .col:first-child {margin-left: 0px;}
+#tertiary .box .fullcol {width:100%; float:left; margin-left:40px;}
+#tertiary .box .fullcol:first-child {margin-left: 0px;}
 .emph { font-style: italic; }
 #tertiary p {margin:20px 0; color: #f3f0e9;}
 #tertiary ul {list-style-type:circle; display:block;}
